Deprecation fixes (#48)
* Deprecation fixes

* Deprecation fixes